--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
       margin: 5% auto;
       padding: 20px;
       border: 1px solid #888;
-      width: 80%;
+      width: 50%; /* Reduce el tamaño del modal */
+      max-width: 400px; /* Limita el ancho máximo */
     }
 
     .close {
@@ -366,15 +367,6 @@
         alert("Selecciona una imagen primero.");
       }
     }
-  </script>
-</body>
-</html> }
-  </script>
-</body>
-</html> }
-  </script>
-</body>
-</html> }
   </script>
 </body>
 </html>
